--- a/package.json
+++ b/package.json
@@ -8,8 +8,18 @@
     "@testing-library/user-event": "^12.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "react-scripts": "^4.0.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "js-cookie": "^2.2.1",
+    "web-vitals": "^0.2.4",
+    "superagent": "^6.1.0",
+    "react-router-dom": "^5.2.0",
+    "belle": "^3.0.2",
+    "immutable": "^4.0.0-rc.12",
+    "history": "^4.10.1",
+    "node-sass": "^4.14.1",
+    "prop-types": "^15.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
